--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -19,8 +19,6 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
-
     padding: 24px 80px 24px 80px
 }
 header nav a {
@@ -119,6 +117,17 @@ p {
     border-top: none;
     border-radius: 0 0 .5rem .5rem;
     margin-top: -.5rem;
+    padding: 0 1.5rem;
+
+    /* js */
+    height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: .2s;
+}
+.duvida.ativa p {
+    height: fit-content;
+    opacity: 1;
     padding: 1.5rem;
 }
 
