--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,11 +8,16 @@
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
+    scroll-behavior: auto;
 }
 body {
     width: 100vw;
     height: 100vh;
     color: var(--secondary-color);
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 /* Header */
@@ -119,6 +124,7 @@ p {
     position: absolute;
     top: 2rem;
     right: 1.5rem;
+    width: auto;
 }
 .duvida p {
     border: 1px solid var(--primary-color);
@@ -152,6 +158,7 @@ footer strong {
     display: block;
     font-weight: 600;
     margin-bottom: 1.5rem;
+    width: auto;
 }
 footer nav a {
     color: var(--secondary-color);
@@ -181,14 +188,12 @@ footer p a {
 }
 
 .container {
-    max-width: 1440px;
     align-items: center;
 }
 
 /* Responsividade */
 img {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
 }
 
 @media (max-width: 600px) {
@@ -212,21 +217,23 @@ img {
     header nav a:nth-child(2n-1) { /* pegar todos os links(a) filhos na nav do header que forem ímpares */
         text-align: right;
     }
+    
+    .container {
+        flex-direction: column;
+    }
 
-    #hero-page {
+    #hero-page, 
+    #clinica {
         flex-direction: column; /* Stack content on top for small screens */
-        padding: 24px;
+        padding: 3rem;
     }
     .hero-texts {
         text-align: center;
     }
-    .button {
+    .buttons {
         margin-top: 16px;
-    }
-
-    #clinica {
-        flex-direction: column; /* Stack content on top for small screens */
-        padding: 24px;
+        display: flex;
+        flex-direction: column;
     }
 
     #clinica li {
@@ -235,10 +242,6 @@ img {
 
     #farmacia {
         padding: 24px;
-    }
-
-    #farmacia img {
-        margin: 16px auto;
     }
 
     #farmacia p {
@@ -273,9 +276,6 @@ img {
 
 /* Tablet */
 @media (min-width: 601px) and (max-width: 1024px) {
-    body {
-        font-size: 28px; /* Adjust font size for tablet screens if needed */
-    }
     #hero-page,
     #clinica,
     #farmacia,
@@ -284,9 +284,16 @@ img {
         justify-items: center;
     }
 
+    #hero-page > .container {
+        flex-direction: column;
+    }
 
     header {
-        padding: 16px 40px; /* Reduce header padding for tablets */
+        padding: 0 0 16px 0; /* Reduce header padding for tablets */
+    }
+    header nav {
+        display: flex;
+        flex-direction: row;
     }
     header nav a {
         padding: 16px 24px; /* Adjust padding for navigation links */
@@ -313,7 +320,8 @@ img {
     }
 
     #farmacia img {
-        margin: 24px auto; /* Adjust margin for the pharmacy section image */
+        height: auto;
+        margin: auto; /* Adjust margin for the pharmacy section image */
     }
 
     .duvida h3 {
@@ -327,5 +335,8 @@ img {
 
 /* Desktop */
 @media (min-width: 1025px) {
-    /* Adjust styles for large screens here */
+   .buttons {
+    display: flex;
+    flex-direction: row;
+   }
 }
